fix: userpicker one css rule was out of place

--- a/src/styles/ui/shared-components/UserPicker.scss
+++ b/src/styles/ui/shared-components/UserPicker.scss
@@ -1,18 +1,16 @@
 .user-picker {
-  .create-new-chat {
-    .chat-creation-header {
-      @extend %flex-row;
-      @extend %flex-align-center;
-      @extend %flex-shrink-0;
-      margin-bottom: $margin-large;
-      padding: $padding-default;
+  .chat-creation-header {
+    @extend %flex-row;
+    @extend %flex-align-center;
+    @extend %flex-shrink-0;
+    margin-bottom: $margin-large;
+    padding: $padding-default;
 
-      .title {
-        margin-right: auto;
+    .title {
+      margin-right: auto;
 
-        span {
-          display: block;
-        }
+      span {
+        display: block;
       }
     }
   }
